--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   },
-  "name": "scribble",
+  "name": "Note Taker ExpressLKH",
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
