--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hufflk96/notetakerexpresslkh"
+    "url": "git+https://github.com/hufflk96/notetakerexpresslkh.git"
   },
   "keywords": [],
   "author": "",
