--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "keywords": [],
   "author": "",
+   "license": "No License",
+  "bugs": {
+    "url": "https://github.com/hufflk96/notetakerexpresslkh/issues"
   },
   "homepage": "https://github.com/hufflk96/notetakerexpresslkh/blob/main/README.md"
 }
